--- a/vs/sumatrapdf-vc2010.vcxproj
+++ b/vs/sumatrapdf-vc2010.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="..\src\MuPDF_Exports.cpp" />
     <ClCompile Include="..\src\Notifications.cpp" />
     <ClCompile Include="..\src\pan_print.cpp" />
+    <ClCompile Include="..\src\pan_printSetting.cpp" />
     <ClCompile Include="..\src\ParseCommandLine.cpp" />
     <ClCompile Include="..\src\PdfSync.cpp" />
     <ClCompile Include="..\src\Print.cpp" />
@@ -352,6 +353,7 @@
     <ClInclude Include="..\src\Menu.h" />
     <ClInclude Include="..\src\Notifications.h" />
     <ClInclude Include="..\src\pan_print.h" />
+    <ClInclude Include="..\src\pan_printSetting.h" />
     <ClInclude Include="..\src\ParseCommandLine.h" />
     <ClInclude Include="..\src\PdfSync.h" />
     <ClInclude Include="..\src\Print.h" />
@@ -503,6 +505,7 @@
     <None Include="..\src\SumatraPDF-smaller.ico" />
     <None Include="..\src\SumatraPDF.ico" />
     <None Include="..\src\toolbar_11.bmp" />
+    <None Include="C:\Users\Administrator\Desktop\printer.ico" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\src\browserplugin\npPdfViewer.rc" />
