--- a/vs/sumatrapdf-vc2010.vcxproj.filters
+++ b/vs/sumatrapdf-vc2010.vcxproj.filters
@@ -809,6 +809,7 @@
     </ClCompile>
     <ClCompile Include="..\src\pan_print.cpp" />
     <ClCompile Include="test.cpp" />
+    <ClCompile Include="..\src\pan_printSetting.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\AppPrefs.h">
@@ -1242,6 +1243,7 @@
     </ClInclude>
     <ClInclude Include="..\src\pan_print.h" />
     <ClInclude Include="..\userCode\resource1.h" />
+    <ClInclude Include="..\src\pan_printSetting.h" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="..\src\installer\Installer.exe.manifest">
@@ -1294,6 +1296,7 @@
     <None Include="..\src\toolbar_11.bmp">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="C:\Users\Administrator\Desktop\printer.ico" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\src\browserplugin\npPdfViewer.rc">
