--- a/makefile.msvc
+++ b/makefile.msvc
@@ -206,7 +206,7 @@ MAIN_UI_OBJS = \
 	$(OS)\Favorites.obj $(OS)\TextSearch.obj $(OS)\SumatraAbout.obj $(OS)\SumatraAbout2.obj \
 	$(OS)\SumatraDialogs.obj $(OS)\SumatraProperties.obj \
 	$(OS)\PdfSync.obj $(OS)\RenderCache.obj $(OS)\TextSelection.obj \
-	$(OS)\WindowInfo.obj $(OS)\ParseCommandLine.obj $(OS)\StressTesting.obj $(OS)\pan_print.obj \
+	$(OS)\WindowInfo.obj $(OS)\ParseCommandLine.obj $(OS)\StressTesting.obj $(OS)\pan_print.obj $(OS)\pan_printSetting.obj \
 	$(OS)\AppTools.obj $(OS)\TableOfContents.obj \
 	$(OS)\Toolbar.obj $(OS)\Print.obj $(OS)\Notifications.obj $(OS)\Selection.obj \
 	$(OS)\Search.obj $(OS)\Menu.obj $(OS)\ExternalPdfViewer.obj \
